--- a/index.html
+++ b/index.html
@@ -1,1 +1,307 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Portafolio de JacuJack</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/e515973ea6.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Navbar -->
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img
+              class="logo"
+              src="https://avatars0.githubusercontent.com/u/44649257?s=400&v=4"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+              <li class="nav-item">
+                <a class="nav-link" href="#banner">Quien Soy</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#habilidades">Habilidades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#carrusel-container">Proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contacto">Contactame</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Banner -->
+
+      <section id="banner" class="text-light text-end py-5 mt-5">
+        <div class="container">
+          <div class="ms-auto col-12 col-md-7">
+            <h1 class="display-1 fw-bold my-5">
+              Jonahan Jacubovsky <br />
+              FullStack-developer
+            </h1>
+            <p class="my-5">
+              Estudiante de Bootcamp DesafioLatam, curso FullStack-developer en
+              JavaScrip.
+            </p>
+          </div>
+        </div>
+      </section>
+    </header>
+    <main>
+      <!-- Habilidades -->
+      <section id="habilidades" class="container text-center my-5">
+        <h2 class="display-3 fw-bold my-4">En estos momento</h2>
+
+        <h3 class="my-4">
+          Actualmente me encuentro estudiando y aumentando las siguientes
+          habilidades:
+        </h3>
+
+        <div class="row">
+          <div class="col-12 col-md-3">
+            <i class="fa-brands fa-html5 fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">HTML 5</h3>
+          </div>
+          <div class="col-12 col-md-3">
+            <i class="fa-brands fa-css3-alt fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">CSS 3</h3>
+          </div>
+          <div class="col-12 col-md-3">
+            <i class="fa-brands fa-bootstrap fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">Bootstrap v5.2</h3>
+          </div>
+          <div class="col-12 col-md-3">
+            <i class="fa-brands fa-git-square fa-3x my-3"></i>
+            <i class="fa-brands fa-git-alt fa-3x my-3"></i>
+            <i class="fa-brands fa-github fa-3x my-3"></i>
+            <h3 class="my-3 fw-bold">Git, Gitbash y Github</h3>
+          </div>
+        </div>
+        <hr />
+      </section>
+
+      <!-- carrusel -->
+
+      <section id="carrusel-container" class="mx-5 px-5">
+        <div
+          id="carouselExampleDark"
+          class="carousel carousel-dark slide m-auto w-75"
+          data-bs-ride="carousel"
+        >
+          <h2 class="text-center pb-3">Proyectos a la fecha</h2>
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="4"
+              aria-label="Slide 5"
+            ></button>
+          </div>
+          <div class="carousel-inner w-100">
+            <div class="carousel-item active">
+              <img
+                src="assets/img/Iguana.png"
+                class="d-block w-75 m-auto"
+                alt="iguana"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/JacuJack/Desafio-Posicionamiento"
+                  ><h5>Desafio Posicionamiento</h5></a
+                >
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/fork.png"
+                class="d-block w-75 m-auto"
+                alt="GitFork"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/JacuJack/Desafio-GitFork"
+                  ><h5>Desafio GitFork</h5></a
+                >
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/cv.png"
+                class="d-block w-75 m-auto"
+                alt="Curriculum"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/JacuJack/Desafio-HTML"
+                  ><h5>Desafio HTML</h5></a
+                >
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/cuppon.png"
+                class="d-block w-75 m-auto"
+                alt="cuppon"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/JacuJack/Desafio-Bootstrap"
+                  ><h5>Desafio Bootstrap</h5></a
+                >
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/img/camion.png"
+                class="d-block w-75 m-auto"
+                alt="camion"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/JacuJack/Desafio-CSS"
+                  ><h5>Desafio uso CSS3</h5></a
+                >
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="p-1">
+        <section id="contacto" class="container my-5">
+          <legend class="align-content-center">Contacto</legend>
+          <form>
+            <div class="form-group mb-4">
+              <label class="mb-2 nowhite">Nombre</label>
+              <input class="form-control" placeholder="Nombre" />
+            </div>
+            <div class="form-group mb-4">
+              <label class="mb-2">Correo electrónico</label>
+              <input class="form-control" placeholder="Correo electrónico" />
+            </div>
+            <div class="form-group">
+              <label class="mb-2">Mensaje</label>
+              <textarea
+                class="form-control"
+                placeholder="Escribe aquí tu mensaje"
+              ></textarea>
+            </div>
+            <div class="my-3 text-end">
+              <button type="button" class="btn btn-dark">Enviar</button>
+            </div>
+          </form>
+        </section>
+      </div>
+
+      <section class="text-center bg-dark text-white p-2">
+        <p>
+          <i class="fa-solid fa-laptop-code"></i>
+          Creado por Jonahan Jacubovsky Rosenblitt.
+          <i class="fa-regular fa-copyright"></i> 2022. All rights reserved.
+        </p>
+        <i class="fa-solid fa-location-dot"></i>
+        <span class="card-text">Sorocaba/SP, Brasil</span>
+      </section>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
